@@ -9,6 +9,7 @@ import io.modelcontextprotocol.json.TypeRef;
 import io.modelcontextprotocol.spec.*;
 import io.modelcontextprotocol.util.Assert;
 import io.modelcontextprotocol.util.Utils;
+import lombok.var;
 import org.noear.solon.core.handle.StatusCodes;
 import org.noear.solon.core.util.MimeType;
 import org.noear.solon.net.http.HttpResponse;
@@ -27,10 +28,7 @@ import reactor.util.function.Tuple2;
 import reactor.util.function.Tuples;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -51,7 +49,7 @@ import java.util.function.Function;
  * This implementation does not handle backwards compatibility with the <a href=
  * "https://modelcontextprotocol.io/specification/2024-11-05/basic/transports#http-with-sse">"HTTP
  * with SSE" transport</a>. In order to communicate over the phased-out
- * <code>2024-11-05</code> protocol, use {@link HttpClientSseClientTransport} or
+ * <code>2024-11-05</code> protocol, use {@link WebRxSseClientTransport} or
  * {@link WebRxSseClientTransport}.
  * </p>
  *
@@ -106,7 +104,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
         this.resumableStreams = resumableStreams;
         this.openConnectionOnStartup = openConnectionOnStartup;
         this.activeSession.set(createTransportSession());
-        this.supportedProtocolVersions = List.copyOf(supportedProtocolVersions);
+        this.supportedProtocolVersions = new ArrayList<>(supportedProtocolVersions);
         this.latestSupportedProtocolVersion = this.supportedProtocolVersions.stream()
                 .sorted(Comparator.reverseOrder())
                 .findFirst()
@@ -163,7 +161,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
     private McpTransportSession<Disposable> createClosedSession(McpTransportSession<Disposable> existingSession) {
         var existingSessionId = Optional.ofNullable(existingSession)
-                .filter(session -> !(session instanceof ClosedMcpTransportSession<Disposable>))
+                .filter(session -> !(session instanceof ClosedMcpTransportSession))
                 .flatMap(McpTransportSession::sessionId)
                 .orElse(null);
         return new ClosedMcpTransportSession<>(existingSessionId);
@@ -499,7 +497,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                 // We don't support batching ATM and probably won't since the next version
                 // considers removing it.
                 McpSchema.JSONRPCMessage message = McpSchema.deserializeJsonRpcMessage(this.jsonMapper, event.data());
-                return Tuples.of(Optional.ofNullable(event.id()), List.of(message));
+                return Tuples.of(Optional.ofNullable(event.id()), Arrays.asList(message));
             } catch (IOException ioException) {
                 throw new McpTransportException("Error parsing JSON-RPC message: " + event.data(), ioException);
             }
@@ -524,7 +522,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
         private boolean openConnectionOnStartup = false;
 
-        private List<String> supportedProtocolVersions = List.of(ProtocolVersions.MCP_2024_11_05,
+        private List<String> supportedProtocolVersions = Arrays.asList(ProtocolVersions.MCP_2024_11_05,
                 ProtocolVersions.MCP_2025_03_26, ProtocolVersions.MCP_2025_06_18);
 
         private Builder(HttpUtilsBuilder webClientBuilder) {
