@@ -11,6 +11,7 @@ import io.modelcontextprotocol.server.McpTransportContextExtractor;
 import io.modelcontextprotocol.spec.*;
 import io.modelcontextprotocol.util.Assert;
 import io.modelcontextprotocol.util.KeepAliveScheduler;
+import lombok.var;
 import org.noear.solon.SolonApp;
 import org.noear.solon.core.handle.Context;
 import org.noear.solon.core.handle.Entity;
@@ -28,6 +29,7 @@ import reactor.core.publisher.Mono;
 
 import java.io.IOException;
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -143,7 +145,7 @@ public class WebRxStreamableServerTransportProvider implements McpStreamableServ
 
 	@Override
 	public List<String> protocolVersions() {
-		return List.of(ProtocolVersions.MCP_2024_11_05, ProtocolVersions.MCP_2025_03_26,
+		return Arrays.asList(ProtocolVersions.MCP_2024_11_05, ProtocolVersions.MCP_2025_03_26,
 				ProtocolVersions.MCP_2025_06_18);
 	}
 
@@ -281,30 +283,30 @@ public class WebRxStreamableServerTransportProvider implements McpStreamableServ
 		return Mono.just(request.body()).<Entity>flatMap(body -> {
 					try {
 						McpSchema.JSONRPCMessage message = McpSchema.deserializeJsonRpcMessage(jsonMapper, body);
-						if (message instanceof McpSchema.JSONRPCRequest jsonrpcRequest
-								&& jsonrpcRequest.method().equals(McpSchema.METHOD_INITIALIZE)) {
-							var typeReference = new TypeRef<McpSchema.InitializeRequest>() {
-							};
-							McpSchema.InitializeRequest initializeRequest = jsonMapper.convertValue(jsonrpcRequest.params(),
-									typeReference);
-							McpStreamableServerSession.McpStreamableServerSessionInit init = this.sessionFactory
-									.startSession(initializeRequest);
-							sessions.put(init.session().getId(), init.session());
-							return init.initResult().map(initializeResult -> {
-										McpSchema.JSONRPCResponse jsonrpcResponse = new McpSchema.JSONRPCResponse(
-												McpSchema.JSONRPC_VERSION, jsonrpcRequest.id(), initializeResult, null);
-										try {
-											return this.jsonMapper.writeValueAsString(jsonrpcResponse);
-										}
-										catch (IOException e) {
-											logger.warn("Failed to serialize initResponse", e);
-											throw Exceptions.propagate(e);
-										}
-									})
-									.flatMap(initResult -> RxEntity.ok()
-											.contentType(MimeType.APPLICATION_JSON_VALUE)
-											.headerSet(HttpHeaders.MCP_SESSION_ID, init.session().getId())
-											.body(initResult));
+						if (message instanceof McpSchema.JSONRPCRequest) {
+							McpSchema.JSONRPCRequest jsonrpcRequest = (McpSchema.JSONRPCRequest) message;
+							if (jsonrpcRequest.method().equals(McpSchema.METHOD_INITIALIZE)) {
+								var typeReference = new TypeRef<McpSchema.InitializeRequest>() {};
+								McpSchema.InitializeRequest initializeRequest = jsonMapper.convertValue(jsonrpcRequest.params(),
+										typeReference);
+								McpStreamableServerSession.McpStreamableServerSessionInit init = this.sessionFactory
+										.startSession(initializeRequest);
+								sessions.put(init.session().getId(), init.session());
+								return init.initResult().map(initializeResult -> {
+											McpSchema.JSONRPCResponse jsonrpcResponse = new McpSchema.JSONRPCResponse(
+													McpSchema.JSONRPC_VERSION, jsonrpcRequest.id(), initializeResult, null);
+											try {
+												return this.jsonMapper.writeValueAsString(jsonrpcResponse);
+											} catch (IOException e) {
+												logger.warn("Failed to serialize initResponse", e);
+												throw Exceptions.propagate(e);
+											}
+										})
+										.flatMap(initResult -> RxEntity.ok()
+												.contentType(MimeType.APPLICATION_JSON_VALUE)
+												.headerSet(HttpHeaders.MCP_SESSION_ID, init.session().getId())
+												.body(initResult));
+							}
 						}
 
 						if (request.headerMap().containsKey(HttpHeaders.MCP_SESSION_ID) == false) {
@@ -319,13 +321,16 @@ public class WebRxStreamableServerTransportProvider implements McpStreamableServ
 									.body(new McpError("Session not found: " + sessionId));
 						}
 
-						if (message instanceof McpSchema.JSONRPCResponse jsonrpcResponse) {
+						if (message instanceof McpSchema.JSONRPCResponse) {
+							McpSchema.JSONRPCResponse jsonrpcResponse = (McpSchema.JSONRPCResponse)message;
 							return session.accept(jsonrpcResponse).then(RxEntity.accepted().build());
 						}
-						else if (message instanceof McpSchema.JSONRPCNotification jsonrpcNotification) {
+						else if (message instanceof McpSchema.JSONRPCNotification) {
+							McpSchema.JSONRPCNotification jsonrpcNotification = (McpSchema.JSONRPCNotification)message;
 							return session.accept(jsonrpcNotification).then(RxEntity.accepted().build());
 						}
-						else if (message instanceof McpSchema.JSONRPCRequest jsonrpcRequest) {
+						else if (message instanceof McpSchema.JSONRPCRequest) {
+							McpSchema.JSONRPCRequest jsonrpcRequest = (McpSchema.JSONRPCRequest)message;
 							return RxEntity.ok()
 									.contentType(MimeType.TEXT_EVENT_STREAM_VALUE)
 									.body(Flux.<SseEvent>create(sink -> {
